# Payloads

./: CMakeLists.txt  README.md
efialtis/: CMakeLists.txt  commands.c  commands.h  config.h.in  main.c  main.h
efialtis/headers/: commands.h  config.h.in  main.h
shared/c/headers/: custom_error.h  dbg.h
